--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,8 +21,10 @@
 }
 
 .card__text {
+  margin: 0;
   font-size: 24px;
   line-height: 1.21;
+  font-weight: 900;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
