--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,13 +6,16 @@
 .footer__content {
   color: #545454;
   margin: 48px auto 0 0;
-  max-width: 318px;
   font-size: 18px;
   line-height: 1.21;
   font-weight: 400;
 }
 
 @media screen and (max-width: 618px) {
+  .footer {
+    padding-left: 19px;
+  }
+
   .footer__content {
     font-size: 14px;
     line-height: 1.21;
