--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,19 +4,21 @@
 }
 
 .page__content {
+  max-width: 1280px;
+  min-width: 320px;
   margin: 0 auto;
   box-sizing: border-box;
   padding: 45px 19px 60px;
   color: #ffffff;
 }
 
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 768px) {
   .page__content {
     padding: 36px 32px 48px;
   }
 }
 
-@media screen and (max-width: 618px) {
+@media screen and (max-width: 598px) {
   .page__content {
     padding: 28px 0 36px;
   }
