--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,8 @@
 @import url("../blocks/page.css");
 @import url("../blocks/header.css");
 @import url("../blocks/profile.css");
+@import url("../blocks/modal.css");
+@import url("../blocks/form.css");
 @import url("../blocks/gallery.css");
 @import url("../blocks/card.css");
 @import url("../blocks/footer.css");
