--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -33,8 +33,8 @@
   width: 40px;
   height: 40px;
   padding: 0;
-  top: -39px;
-  left: 428px;
+  top: -45px;
+  left: 435px;
   background-color: transparent;
   border: none;
   transition: opacity 0.1s linear;
@@ -43,6 +43,11 @@
 
 .modal__close-button:hover {
   opacity: 0.6;
+}
+
+.modal__close-button-img {
+  width: 100%;
+  height: 100%;
 }
 
 .modal__title {
@@ -68,6 +73,6 @@
     width: 26px;
     height: 26px;
     top: -50px;
-    left: 250px;
+    left: 257px;
   }
 }
