update css feature and event listeners in js

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -67,12 +67,13 @@
 
   .modal__title {
     padding-bottom: 75px;
+    font-size: 18px;
   }
 
   .modal__close-button {
-    width: 26px;
-    height: 26px;
-    top: -50px;
-    left: 257px;
+    width: 21px;
+    height: 21px;
+    top: -42px;
+    left: 252px;
   }
 }
