--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,7 +1,24 @@
 .card {
+  position: relative;
   width: 282px;
   border-radius: 10px;
   overflow: hidden;
+}
+
+.card__delete-button {
+  width: 18px;
+  height: 19.3px;
+  position: absolute;
+  top: 18px;
+  left: 250px;
+  z-index: 0;
+  border: none;
+  background-color: transparent;
+  background-image: url("../images/trash.svg");
+}
+
+.card__delete-button:hover {
+  opacity: 0.6;
 }
 
 .card__image {
@@ -12,7 +29,7 @@
 }
 
 .card__content {
-  padding: 25px 18px;
+  padding: 25px 20px;
   background-color: #ffffff;
   color: #000000;
   display: flex;
@@ -34,10 +51,10 @@
 .card__like-button {
   width: 21px;
   height: 18px;
-  background: no-repeat url("../images/heart.svg");
-  background-size: cover;
+  background: transparent url("../images/heart.svg") no-repeat center;
   border: none;
   padding: 0;
+  margin: 0;
   transition: opacity 0.1s linear;
   cursor: pointer;
 }
