--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,22 +1,28 @@
 .modal {
-  display: none;
-  position: fixed;
   z-index: 1;
-  left: 0;
+  position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: auto;
+  visibility: hidden;
+  opacity: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
-  display: block;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
   box-sizing: border-box;
-  position: fixed;
   z-index: 1;
   margin: 195px auto;
   max-width: 430px;
@@ -27,14 +33,24 @@
   position: relative;
 }
 
+.modal__container_type_image {
+  background: none;
+  max-width: 75vw;
+  max-height: 75vh;
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 6.5% auto;
+  padding: 0;
+}
+
 .modal__close-button {
   position: absolute;
-  z-index: 1;
-  width: 40px;
-  height: 40px;
+  z-index: 2;
+  width: 28px;
+  height: 28px;
   padding: 0;
-  top: -45px;
-  left: 435px;
+  bottom: calc(100% + 4px);
+  left: calc(100% + 4px);
   background-color: transparent;
   border: none;
   transition: opacity 0.1s linear;
@@ -50,6 +66,11 @@
   height: 100%;
 }
 
+.modal__close-button_type_image {
+  bottom: calc(100% + 5px);
+  left: calc(100% + 5px);
+}
+
 .modal__title {
   margin: 0;
   padding-bottom: 54px;
@@ -59,10 +80,30 @@
   font-weight: 900;
 }
 
+.modal__image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  overflow: auto;
+}
+
+.modal__image-title {
+  margin: 10px 0 0 0;
+  max-width: 291px;
+  font-weight: 400;
+  font-size: 12px;
+}
+
 @media screen and (max-width: 598px) {
   .modal__container {
     max-width: 282px;
     padding: 25px 22px;
+    margin: 130px auto;
+  }
+
+  .modal__container_type_image {
+    padding: 18px;
+    margin: 0;
   }
 
   .modal__title {
@@ -71,9 +112,18 @@
   }
 
   .modal__close-button {
-    width: 21px;
-    height: 21px;
-    top: -42px;
-    left: 252px;
+    width: 18px;
+    height: 18px;
+    top: -10%;
+    left: 91%;
+  }
+
+  .modal__close-button_type_image {
+    top: -1%;
+    left: 96%;
+  }
+
+  .modal__image-title {
+    max-width: 240px;
   }
 }
