--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: auto;
   visibility: hidden;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.5);
@@ -37,15 +36,12 @@
   background: none;
   max-width: 75vw;
   max-height: 75vh;
-  display: flex;
-  flex-flow: column nowrap;
-  margin: 6.5% auto;
   padding: 0;
+  box-shadow: none;
 }
 
 .modal__close-button {
   position: absolute;
-  z-index: 2;
   width: 28px;
   height: 28px;
   padding: 0;
@@ -66,11 +62,6 @@
   height: 100%;
 }
 
-.modal__close-button_type_image {
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
-}
-
 .modal__title {
   margin: 0;
   padding-bottom: 54px;
@@ -83,8 +74,6 @@
 .modal__image {
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
-  overflow: auto;
 }
 
 .modal__image-title {
@@ -119,8 +108,8 @@
   }
 
   .modal__close-button_type_image {
-    top: -1%;
-    left: 96%;
+    top: 0%;
+    left: 94%;
   }
 
   .modal__image-title {
