--- a/blocks/form.css
+++ b/blocks/form.css
@@ -9,6 +9,7 @@
 
 .form__label {
   padding-top: 29.74px;
+  position: relative;
 }
 
 .form__label:first-of-type {
@@ -25,17 +26,23 @@
   padding: 0 0 13.26px;
 }
 
+.form__input_type_error {
+  border-color: red;
+}
+
 .form__input-error {
-  color: red;
+  font-size: 12px;
+  line-height: 1.21;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 5px);
+  transition: opacity 0.3s;
+  color: #ff0000;
   opacity: 0;
 }
 
 .form__input-error_active {
   opacity: 1;
-}
-
-.form__input_type_error {
-  border-color: red;
 }
 
 .form__button {
@@ -55,9 +62,9 @@
   opacity: 0.8;
 }
 
-.form__button_inactive {
+.form__button_disabled {
   background-color: #ffffff;
-  color: #000000;
+  color: rgba(0, 0, 0, 0.2);
   border: solid 1px rgba(0, 0, 0, 0.2);
 }
 
